Modulo de Transoformacion de XML semiCompletado, queda probar y visualizar. Falta corregir la carga de imagenes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
 	<color name="bannerText"> @color/grey_5</color>
 	<color name="transparent_white_overlay">#EFFFFFFF</color>
 	<!--	END Printer Banner	-->
+    <string name="msg_error_template_already_exists">Ya existe un template con mismo nombre</string>
 </resources>
