--- a/app/src/main/res/drawable/bg_photo_field.xml
+++ b/app/src/main/res/drawable/bg_photo_field.xml
@@ -2,18 +2,18 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape>
-            <solid android:color="#548BC34A" />
-<!--            <stroke-->
-<!--                android:width="1dp"-->
-<!--                android:dashWidth="1dp"-->
-<!--                android:dashGap="0dp"-->
-<!--                android:color="#BF8BC34A" />-->
+            <solid android:color="@color/shadow_overlay" />
+            <stroke
+                android:width="2dp"
+                android:dashWidth="5dp"
+                android:dashGap="5dp"
+                android:color="@color/shadow_overlay_alt" />
             <padding
                 android:bottom="1dp"
                 android:left="1dp"
                 android:right="1dp"
                 android:top="1dp" />
-            <corners android:radius="@dimen/card_rad_corn" />
+<!--            <corners android:radius="@dimen/card_rad_corn" />-->
         </shape>
     </item>
 </layer-list>
