--- a/app/src/main/res/layout/printtemplate_fragment.xml
+++ b/app/src/main/res/layout/printtemplate_fragment.xml
@@ -37,4 +37,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/printer_card" app:layout_constraintEnd_toEndOf="parent"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/spacing_middle"
+        android:layout_marginVertical="@dimen/spacing_large"
+        android:background="@drawable/bg_add_photo"
+        android:paddingVertical="@dimen/spacing_smlarge"
+        android:textAppearance="?attr/textAppearanceSubtitle1"
+        android:textColor="@color/shadow_overlay"
+        app:layout_constraintTop_toBottomOf="@+id/fields_container_Llyt"
+        android:text="Print OwO"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
